# WavesGachaSim

./: LICENSE  README.md  __init__.py  pyproject.toml
WavesGachaSim/: __init__.py  api.py  data_manager.py  draw_gacha_result.py  gacha_service.py  gacha_sim_config.py  models.py  pool_manager.py
WavesGachaSim/config/: standard_pools.json  weapons_3star.json
WavesGachaSim/gacha_help/: __init__.py  get_help.py  help.json
WavesGachaSim/templates/: gacha_result.html  pool_select.html
