[tool.poetry]
name = "WavesGachaSim"
version = "1.1.0"
description = "鸣潮模拟抽卡插件 - gsuid_core plugin for Wuthering Waves gacha simulation"
authors = ["Weila"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
httpx = "*"
sqlmodel = "*"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "WavesGachaSim"
version = "1.1.0"
description = "鸣潮模拟抽卡插件 - gsuid_core plugin for Wuthering Waves gacha simulation"
requires-python = ">=3.10, <4.0"
dependencies = [
    "httpx",
    "sqlmodel",
]
